--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: test not specified\" && exit 1",
-    "build": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
