--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: test not specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: test not specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
