--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "serve-index": "^1.9.1",
     "gtts": "^0.2.1",
     "node-fetch": "^3.2.6"
   },
