--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "node index.js",
     "test": "echo \"Error: test not specified\" && exit 1"
   },
   "keywords": [],
